# pycrap

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: crap.yml  docs.yml  pr-comment.yaml  release.yml
doc/: mkdocs.yml
doc/docs/: changelog.md  index.md  license.md
doc/docs/commands/: scan.md
doc/docs/concepts/: crap-score.md  index.md  missing-policy.md  mutation-testing.md  understanding-the-metrics.md
doc/docs/getting-started/: installation.md  quickstart.md
doc/docs/integrations/: azure-devops.md  circleci.md  gitea.md  github-actions.md  gitlab.md  index.md  jenkins.md
doc/docs/resources/: index.md  known-issues.md
src/py_crap/: __main__.py  version.py
src/py_crap/cli/: main.py  scan.py  version.py
src/py_crap/complexity/: analyzer.py  directives.py
src/py_crap/coverage/: parser.py  runner.py
src/py_crap/merge/: merger.py
src/py_crap/mutation/: annotator.py  mutmut_parser.py
src/py_crap/report/: base.py  github.py  json_report.py  pr_comment.py  sarif.py  table.py
src/py_crap/scan/: entries.py  scan.py
src/py_crap/score/: crap.py
tests/: conftest.py  test_cli.py  test_complexity.py  test_merge.py  test_mutation.py  test_report_table.py  test_score.py
tests/testdata/: class_methods.py  complex.py  simple.py  with_exceptions.py
tests/testdata/=/tmp/: coverage-139554pq.xml  coverage-1nfxhye_.xml  coverage-27mxy4c3.xml  coverage-2_rrgdrk.xml  coverage-5fm2d87g.xml  (+48 more)
