[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-crap"
version = "0.1.0"
description = "CRAP score calculator for Python projects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "coverage>=7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1", "mypy>=1.0"]

[project.urls]
Homepage = "https://github.com/padiazg/py-crap"
Repository = "https://github.com/padiazg/py-crap"

[project.scripts]
py-crap = "py_crap.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["py_crap*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
strict = false
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
